// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialOfferAccept Screen renders correctly 1`] = `
<Modal
  animationType="none"
  transparent={true}
  visible={true}
>
  <RNCSafeAreaView
    edges={
      Object {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Array [
          Object {
            "padding": 16,
          },
          undefined,
        ]
      }
      showsVerticalScrollIndicator={false}
    >
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 26,
                    "fontWeight": "normal",
                  },
                  Object {
                    "marginTop": 30,
                    "textAlign": "center",
                  },
                ],
              ]
            }
            testID="com.ariesbifold:id/CredentialOnTheWay"
          >
            CredentialOffer.CredentialOnTheWay
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "marginTop": 20,
              },
              Object {
                "alignItems": "center",
                "justifyContent": "flex-end",
                "minHeight": 250,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "flexDirection": "column",
              }
            }
          >
            <
              height={110}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "marginTop": -30,
                  "position": "absolute",
                }
              }
              width={110}
            />
            <View
              collapsable={false}
              style={
                Object {
                  "opacity": 0,
                  "transform": Array [
                    Object {
                      "translateY": -90,
                    },
                  ],
                }
              }
            >
              <
                height={110}
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "marginLeft": 10,
                    "position": "absolute",
                  }
                }
                width={110}
              />
            </View>
            <
              height={140}
              style={
                Object {
                  "backgroundColor": "transparent",
                }
              }
              width={140}
            />
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "gap": 16,
          },
          Object {
            "paddingBottom": 16,
            "paddingHorizontal": 16,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Loading.BackToHome"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderColor": "#42803E",
            "borderRadius": 4,
            "borderWidth": 2,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="com.ariesbifold:id/BackToHome"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ],
              ]
            }
          >
            Loading.BackToHome
          </Text>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`CredentialOfferAccept Screen transitions to offer accepted 1`] = `
<Modal
  animationType="none"
  transparent={true}
  visible={true}
>
  <RNCSafeAreaView
    edges={
      Object {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Array [
          Object {
            "padding": 16,
          },
          undefined,
        ]
      }
      showsVerticalScrollIndicator={false}
    >
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 26,
                    "fontWeight": "normal",
                  },
                  Object {
                    "marginTop": 30,
                    "textAlign": "center",
                  },
                ],
              ]
            }
            testID="com.ariesbifold:id/CredentialAddedToYourWallet"
          >
            CredentialOffer.CredentialAddedToYourWallet
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "marginTop": 20,
              },
              Object {
                "alignItems": "center",
                "justifyContent": "flex-end",
                "minHeight": 250,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "flexDirection": "column",
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "alignItems": "center",
                  "marginBottom": 10,
                  "opacity": 0,
                }
              }
            >
              <
                height={45}
                width={45}
              />
            </View>
            <View>
              <
                height={110}
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "marginTop": -30,
                    "position": "absolute",
                  }
                }
                width={110}
              />
              <View
                collapsable={false}
                style={
                  Object {
                    "opacity": 0,
                    "transform": Array [
                      Object {
                        "translateY": -90,
                      },
                    ],
                  }
                }
              >
                <
                  height={110}
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "marginLeft": 10,
                      "position": "absolute",
                    }
                  }
                  width={110}
                />
              </View>
              <
                height={140}
                style={
                  Object {
                    "backgroundColor": "transparent",
                  }
                }
                width={140}
              />
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "gap": 16,
          },
          Object {
            "paddingBottom": 16,
            "paddingHorizontal": 16,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="Global.Done"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#42803E",
            "borderRadius": 4,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="com.ariesbifold:id/Done"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ],
              ]
            }
          >
            Global.Done
          </Text>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;
